# dplan

./: HLint.hs  LICENSE  README.md  dplan.cabal  dplan.hs  stack.yaml
app/: dplan.hs
appconf/: mering.conf  zsp.conf
src/: Conf.hs  Gui.hs
