name:                dplan
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/dplan#readme
license:             BSD3
license-file:        LICENSE
author:              Maurizio Di Pietro
maintainer:          maurizio.di.pietro@gmail.com
copyright:           2017 Maurizio Di Pietro
category:            Planning
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
 hs-source-dirs:      src
 exposed-modules:     Conf
 build-depends:       base >= 4.7 && < 5
                     ,ConfigFile
                     ,mtl
                      ,transformers
                      ,split
 default-language:    Haskell2010

executable dplan-exe
  hs-source-dirs:      app
  main-is:             dplan.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                      ,csp
                      ,transformers
                      ,mtl
                      ,dplan
                      ,wx
  default-language:    Haskell2010

test-suite dplan-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dplan
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/dplan
